Fix date styling on mobile.

--- a/public/stylesheets/content.css
+++ b/public/stylesheets/content.css
@@ -31,10 +31,16 @@ div#content div.container div#post div.post-date {
   font-weight: 500;
   text-align: center;
   text-transform: uppercase;
-  width: 10%;
+  width: 30%;
   margin: 0 auto;
   margin-bottom: 2.50em;
   padding: 8px 4px;
+}
+
+@media screen and (min-width: 600px) {
+  div#content div.container div#post div.post-date {
+    width: 15%;
+  }
 }
 
 div#content div.container div#post h1 {
